# index

./: .gitignore  COPYRIGHT  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yaml  release.yaml  release.yml
src/: cli.rs  main.rs
src/commands/: clean.rs  config.rs  index.rs  init.rs  list.rs  mcp.rs  mod.rs  prune.rs  remove.rs  retry.rs  search.rs  skip.rs  stats.rs  status.rs  update.rs  watch.rs
src/indexer/: chunk.rs  error.rs  language.rs  mod.rs
src/indexer/languages/: go.rs  java.rs  markdown.rs  mod.rs  python.rs  rust_lang.rs  typescript.rs
src/indexer/workspace/: analyze.rs  cargo.rs  go.rs  jvm.rs  mod.rs  npm.rs  patterns.rs  python.rs  types.rs
src/local/: config.rs  db.rs  indexer.rs  mcp.rs  mod.rs  models.rs  search.rs  storage.rs  vector.rs
src/manifests/: cargo.rs  discover.rs  go.rs  maven.rs  mod.rs  npm.rs  python.rs
src/registry/: client.rs  crates_io.rs  error.rs  go.rs  maven.rs  mod.rs  npm.rs  pypi.rs
src/types/: auth.rs  chunk.rs  error.rs  index.rs  mod.rs  package.rs  tenant.rs
